@@ -1,3 +1,8 @@
+2002-06-07 Mark Crichton  <crichton@gimp.org>
+
+	* csvorbis/VorbisFile.cs: Now works for little endian machines.
+	Big endian machines Coming Soon (TM)
+
 2002-23-05 Mark Crichton  <crichton@gimp.org>
 
 	* README, COPYING: added
